[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/hud_bottom/buffs/buff_tooltip.gd" id="1_chhs5"]

[node name="BuffTooltip" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -102.0
offset_right = 125.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
mouse_filter = 2
script = ExtResource("1_chhs5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 22
text = "Fireball"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.65098, 0.505882, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Casts a magical ball of fire at your target enemy, dealing {dam*0.95} to {dam*1.05} {type} damage."
autowrap_mode = 3
